cabal-version:       2.4

name:                aoc2020
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Shane Kenney
maintainer:          me@shanek.org
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Solve.Day01,
                       Solve.Day02,
                       Solve.Day03
  -- other-modules:
  -- other-extensions:
  build-depends:       base ^>=4.13.0.0,
                       megaparsec

  hs-source-dirs:      src
  default-language:    Haskell2010
